--- a/MyPortfolio-main/Portfolio/projectData.json
+++ b/MyPortfolio-main/Portfolio/projectData.json
@@ -4,15 +4,15 @@
       "name": "Quiz Application",
       "img": "quiz.jpg",
       "description": "A Quiz a With lost of feature lost of different quiz categories, and proper result, and scorecard",
-      "code": "https://github.com/rjkush17/advance-quiz-web-app",
-      "link": "https://quiz-rishabh.vercel.app/"
+      "code": "https://github.com/perfectcse/QuizApp",
+      "link": "https://qize.netlify.app/"
     },
     {
       "name": "Bussiness Website",
       "img": "revertex.jpg",
       "description": "A Bussiness WEbsite where you can see bussiness portfolio,services,testimonial and other",
-      "code": "https://github.com/rjkush17/Revertex-landing-page",
-      "link": "https://revertex-rishabh.netlify.app/"
+      "code": "https://github.com/perfectcse/CODETASKS",
+      "link": "https://llandingpagee.netlify.app/"
     },
     {
       "name": "Blog Web App",
@@ -25,29 +25,29 @@
       "name": "todo",
       "img": "todo.svg",
       "description": "his todo app allows users to create, organize, and track their tasks. It features a clean and intuitive interface,",
-      "code": "https://github.com/rjkush17/Todo-React-App.git",
-      "link": "https://todoapprishabh.netlify.app/"
+      "code": "https://github.com/perfectcse/To-Do-List",
+      "link": "https://github.com/perfectcse/To-Do-List"
     },
     {
       "name": "Form Validation",
       "img": "form.svg",
       "description": "A form Ragistration with complete validations function",
-      "code": "https://github.com/rjkush17/form-validation.git",
+      "code": "https://github.com/rjkush17/form-validation",
       "link": "https://formvalidationrishabh.netlify.app/"
     },
     {
       "name": "Password Genratos",
       "img": "password.jpg",
       "description": "Create random password with you requied lenght and configration",
-      "code": "https://github.com/rjkush17/pasdword-genrator",
-      "link": "https://passwordrishabh.netlify.app/"
+      "code": "https://github.com/rjkush17/form-validation",
+      "link": "https://github.com/rjkush17/form-validation"
     },
     {
       "name": "Weathing-App",
       "img": "weathering.svg",
       "description": "i weathering app using open weather api ",
-      "code": "https://github.com/rjkush17/weather-app",
-      "link": "https://weatheringapprishabh.netlify.app/"
+      "code": "https://github.com/perfectcse/Weathe",
+      "link": "https://maausam.netlify.app/"
     },
     {
       "name": "Contact Management",
